--- a/SELI-Platform/client/stylesheet/empty.css
+++ b/SELI-Platform/client/stylesheet/empty.css
@@ -9,6 +9,16 @@
   justify-content: center;
 }
 
+.empty-dashboard-quiz {
+  position: relative;
+  top: calc(5vh + 1.4em);
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .empty-dashboard-row {
   width: 100%;
   display: flex;
