--- a/SELI-Platform/client/stylesheet/app-bar.css
+++ b/SELI-Platform/client/stylesheet/app-bar.css
@@ -10,14 +10,14 @@
 }
 
 .bar-title {
-  height: 100%;
-  display: flex;
-  align-items: center;
-  color: var(--bar-font-color);
-  padding: 0 calc(var(--menu-size) + 2vw);
-  font-size: 1.25em;
-  font-weight: 500;
-  letter-spacing: 2.5px;
+  height: 100% !important;
+  display: flex !important;
+  align-items: center !important;
+  color: var(--bar-font-color) !important;
+  padding: 0 calc(var(--menu-size) + 2vw) !important;
+  font-size: 1.25em !important;
+  font-weight: 500 !important;
+  letter-spacing: 2.5px !important;
 }
 
 .bar-button-container {
