--- a/SELI-Platform/client/stylesheet/languages-selector.css
+++ b/SELI-Platform/client/stylesheet/languages-selector.css
@@ -56,13 +56,14 @@
   color: var(--white) !important;
 }
 
-.MuiPaper-root{
- background-color:#F8F9FA !important;
-}
+/* .MuiPaper-root{
+  background-color:#F8F9FA !important;
+} */
+
 .MuiButtonBase-root:hover {
-  background-color:#8D9194 !important;
+  background-color:rgb(199, 199, 199) !important;
 }
 
 .MuiMenu-list{
-background-color: #B7BDC2 !important;
+  background-color: #B7BDC2 !important;
 }
