--- a/SELI-Platform/client/stylesheet/accessibility-form.css
+++ b/SELI-Platform/client/stylesheet/accessibility-form.css
@@ -107,12 +107,12 @@
 }
 
 .accessibility-form-title {
-  font-weight: 300;
+  font-weight: bold;
   letter-spacing: 1px;
-  text-transform: uppercase;
-  font-size: 1.25em;
+  text-transform: capitalize;
+  font-size: 1em;
   color: #333;
-  padding: 1.5vh 0;
+  padding: 0.2vh 0;
 }
 
 .accessibility-form-label {
@@ -167,13 +167,16 @@
 }
 
 .a11yEditor {
-  background-color: #f5f5f5;
-  border-style: solid #000000;
+  border: solid 1px #e0e0e0;
 }
 
 .a11yEditor-controls {
+  border: solid 1px #e0e0e0;
   width: 100% !important;
   display: flex !important;
   justify-content: center !important;
-  margin-top: 1.5vh !important;
+}
+.labelEditor{
+  color:  #a59e9e;
+  font-size: 0.7em;
 }
