--- a/SELI-Platform/client/stylesheet/accessibility-form.css
+++ b/SELI-Platform/client/stylesheet/accessibility-form.css
@@ -180,3 +180,169 @@
   color:  #a59e9e;
   font-size: 0.7em;
 }
+
+
+
+
+
+.a11yEditor-root {
+  background: #fff;
+  border: 1px solid #ddd;
+  
+  padding: 0px;
+  max-height: 300px;
+  width: 100%;
+}
+.a11yEditor-controls {
+  margin: 0 5px 5px 5px !important;
+  user-select: none;
+}
+
+.a11yEditor-styleButton{
+  color: #999!important;
+  cursor: pointer!important;
+  display: inline-block!important;
+  padding: 2px!important;
+  max-width: fit-content!important;
+  max-height: 24px!important;
+  border: none!important;
+  margin-right: 16px!important;
+}
+
+.a11yEditor-activeButton {
+  color: #5890ff!important;
+}
+
+.a11yEditor-editor {
+  border-color: rgba(0, 0, 0, 0.23);
+  cursor: text;
+  font-size: 16px;
+  top: -5px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+  padding: 0;
+  transition: padding-left 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,border-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 4px;
+}
+
+.a11yEditor-label{
+  width: fit-content;
+  user-select: none;
+  border: none;
+
+  /*root*/
+  transform-origin: top left;
+  display: block;
+  /*animated*/
+  transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+  /*outlined*/
+  z-index: 1;
+  transform: translate(14px, 20px) scale(1);
+  pointer-events: none;
+}
+
+.a11yEditor-labelShrink {
+    transform: translate(14px, -10px) scale(0.75);
+    background-color: var(--white);
+}
+
+.a11yEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
+  display: none;
+}
+
+.a11yEditor-editor .public-DraftEditorPlaceholder-root {
+  margin-top: 0px;
+  margin-left: 14px;
+  user-select: none;
+  opacity: 0.3;
+  position: absolute;
+}
+
+.a11yEditor-editor .public-DraftEditor-content{
+  min-height: 50px;
+  max-height: 100px;
+  height: 100px;
+  padding: 0px 0px !important;
+  text-indent: 2vw;
+  overflow-y: auto;
+ 
+  
+}
+
+.a11yEditor-focused{
+  border-width: 2px;
+  border-color: #3f51b5;
+
+  top: -5px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0 1px 0 0;
+  padding: 0;
+  /* position: absolute; */
+  transition: padding-left 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,border-color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,border-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
+  border-style: solid;
+  border-radius: 4px;
+}
+
+.a11yEditor-labelFocused,
+.a11yEditor-labelFocused span
+{
+  color: #3f51b5;
+}
+
+.a11yEditor-error{
+  border-color: #f44336;
+}
+
+.a11yEditor-labelError,
+.a11yEditor-labelError span
+{
+  color: #f44336;
+}
+
+.a11yEditor-editor blockquote {
+  display: block;
+  border-width: 2px 0;
+  border-style: solid;
+  border-color: #f44336;
+  padding: 1.5em 0 0.5em;
+  margin: 0 6em;
+  position: relative;
+}
+.a11yEditor-editor blockquote:before {
+  position: absolute;
+  top: 0em;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  width: 3rem;
+  height: 2rem;
+  font: 6em/1.08em 'PT Sans', sans-serif;
+  color: #666;
+  text-align: center;
+}
+
+
+.hide{
+  display: none!important;
+}
+
+.a11yEditor-editor ul,
+.a11yEditor-editor ol, 
+.public-DraftStyleDefault-ol
+{
+  padding-inline-start:40px;
+}
+
+.a11yEditor-error-heading{
+  border-width: 1px;
+  border-style: dotted;
+  border-radius: 4px;
+  border-color: #f44336;
+
+}
