--- a/SELI-Platform/client/stylesheet/storytelling-time.css
+++ b/SELI-Platform/client/stylesheet/storytelling-time.css
@@ -28,7 +28,7 @@
 .storytelling-work-area-full-time {
   /* width: calc(100vw - 400px); */
   width: 100vw;
-  height: calc(100vh - var(--app-bar-height) - 2em - 38vh);
+  height: calc(100vh - var(--app-bar-height) - 2em - var(--actions-height));
   padding-top: 2em;
   background-color: #f5f5f5;
   flex-direction: column;
@@ -43,6 +43,7 @@
   display: flex;
   /* overflow-y: scroll; */
   position: relative;
+  z-index: 0;
 }
 
 .storytelling-work-area-title-time {
@@ -62,25 +63,27 @@
 }
 
 .storytelling-work-area-time { 
-  width: 100vw;
-  height: calc(100% - 6vh - 40px);
-  padding-top: 3vh; 
-  padding-bottom: 3vh;
+  height: calc(100% - 4vh - 40px);
+  padding-left: calc(2vw + 64px);
+  padding-right: 2vw;
+  padding-top: 2vh; 
+  padding-bottom: 2vh;
   background-color: #f5f5f5;
   display: flex;
   align-items: center;
   overflow-x: scroll;
   justify-content: left;
+  z-index: 1;
 }
 
 .storytelling-menu-container-time {
   width: 100vw;
-  height: 38vh;
+  height: var(--actions-height);
   position: relative;
   display: flex;
 }
 
-.storytelling-menu-header-time { /* right part */
+.storytelling-menu-header-time { /* Right part */
   width: 20vw;
   margin-left: 0.5vw;
   margin-right: 1vw;
@@ -89,8 +92,8 @@
   justify-content: center !important;
 }
 
-.storytelling-menu-body-full-time { /* midle part */
-  width: 50vw;
+.storytelling-menu-body-full-time { /* Left part */
+  width: 20vw;
   margin-left: 0.5vw;
   margin-right: 0.5vw;
   /* overflow-y: scroll; */
@@ -103,13 +106,12 @@
 
 .storytelling-menu-body-time {
   width: 100%;
-  height: 33vh;
-  display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.storytelling-menu-body-aux-time {  /* left part */
-  width: 30vw;
+.storytelling-menu-body-aux-time {  /* Midle part */
+  width: 60vw;
   padding: 0 0;
   margin-right: 0.5vw;
   display: flex;
@@ -142,25 +144,61 @@
   animation: zoomIn 1s;
 }
 
-.storytelling-item-full-container-time {
-  width: 100%;
+.storytelling-item-time { /* Absolute objects property*/
   display: flex;
-  padding: 0.25vh 0;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  animation: fadeInDown 0.75s;
 }
 
-.storytelling-item-row-container-time {
-  width: 100%;
-  display: flex;
-  padding: 0.25vh 0;
-  justify-content: center;
+.storytelling-item-full-container-time { /* Main scene  object*/
+  /* min-width: 10vw; */
   align-items: center;
-  animation: fadeInDown 0.75s;
+  animation: fadeInLeft 0.75s;
+}
+
+.storytelling-item-images-scene-time {
+  width: 128px !important;
+  height: 128px !important;
+  position: absolute;
+  bottom: 25px;
+  background-color: #4b814d77 !important;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: 6;
+  transform: perspective(250px) rotateY(60deg);
+  cursor: pointer;
+}
+
+.storytelling-item-name-time {
+  letter-spacing: 1px;
+  font-size: 0.95em;
+  cursor: pointer;
+  margin-left: 0.6vw;
+  margin-bottom: 0.2vh;
+}
+
+.storytelling-item-node-scene-time {
+  height: 100px !important;
+  align-items: center;
+  background-color: #77777777 !important;
+  cursor: pointer;
+}
+
+.storytelling-wave {
+  width: auto;
+  z-index: 10;
+}
+
+.storytelling-item-scripts-scene-time {
+  min-height: 128px !important;
+  align-items: center;
+  background-color: #77777777 !important;
+  cursor: pointer;
+}
+
+.storytelling-item-actions-time {
+  margin-top: 0.5vh;
+  display: flex;
+  position: relative;
 }
 
 .storytelling-item-fab-time {
@@ -169,46 +207,13 @@
   height: 30px !important;
   min-height: 30px !important;
   min-width: 30px !important;
-  margin: 0 0.5vw !important;
+  margin: 0 0.2vw !important;
 }
 
-.storytelling-item-node-start-time {
-  width: 1em !important;
-  height: 1em !important;
-  background-color: var(--primary) !important;
-  margin: 0 1vw !important;
-  transition: 0.25s !important;
-}
-
-.storytelling-item-node-scene-time {
-  width: 1.75em !important;
-  height: 1em !important;
-  background-color: #ff9800 !important;
-  margin: 0 1vw !important;
-  transition: 0.25s !important;
-}
-
-.storytelling-item-node-end-time {
-  width: 1.25em !important;
-  height: 1em !important;
-  background-color: #ef5350 !important;
-  margin: 0 1vw !important;
-  transition: 0.25s !important;
-}
-
-.storytelling-item-node-start-time:hover {
-  transform: scale(1.3);
-  cursor: pointer;
-}
-
-.storytelling-item-node-scene-time:hover {
-  transform: scale(1.3);
-  cursor: pointer;
-}
-
-.storytelling-item-node-end-time:hover {
-  transform: scale(1.3);
-  cursor: pointer;
+.storytelling-item-images-scene-time:hover {
+  z-index: 7;
+  transform: scale(1.5);
+  transition: 0.5s;
 }
 
 .storytelling-item-fab-icon-time {
@@ -225,16 +230,14 @@
   animation: fadeInDown 1s;
   color: #757575 !important;
 }
-.storytelling-selected-empty-container-time {
-  font-size: 2.15em !important;
-  width: 34px;
-  height: 34px;
-}
 
-.storytelling-item-name-time {
-  letter-spacing: 1px;
-  font-size: 0.95em;
-  cursor: pointer;
+.storytelling-selected-empty-container-time {
+  background-color: #4b814d77 !important;
+  z-index: 5;
+  position: absolute;
+  width: 2px;
+  height: calc(110px);
+  top: -10px;
 }
 
 .storytelling-media-preview-container-time {
@@ -413,6 +416,10 @@
   text-align: justify !important;
   margin-left: 1vw !important;
   margin-right: 1vw !important;
+}
+
+.right-click-menu {
+  z-index: 10;
 }
 
 .story-item-container {
