DST Timeline Adding support for labels. Story telling player suppport for DST based on time. Polish language included to the project.

--- a/SELI-Platform/client/stylesheet/library.css
+++ b/SELI-Platform/client/stylesheet/library.css
@@ -67,8 +67,8 @@
 }
 
 .audio-card-storytelling {
-  width: 400px !important;
-  margin: 0.5vh 0.5vw;
+  width: 21vw !important;
+  margin: 0.5vh 0.4vw;
   opacity: 0.9;
   transition: 0.5s !important;
   background-color: #fafafa !important;
