--- a/SELI-Platform/client/stylesheet/sign.css
+++ b/SELI-Platform/client/stylesheet/sign.css
@@ -60,11 +60,20 @@
  
 }
 .sign-actions1 {
+  color: #df1010;
   justify-content: center !important;
   padding-bottom: 2vh !important;
   background-color: #fafafa;
   position: absolute;
+  border: 3px solid #df1010;
 }
+.more-time{
+  background-color: #fafafa;
+  color: #4caf50;
+  border: 3px solid green;
+
+}
+
 .alert{
   position: absolute;
 }
