--- a/SELI-Platform/client/stylesheet/storytelling-time.css
+++ b/SELI-Platform/client/stylesheet/storytelling-time.css
@@ -28,8 +28,7 @@
 .storytelling-work-area-full-time {
   /* width: calc(100vw - 400px); */
   width: 100vw;
-  height: calc(100vh - var(--app-bar-height) - 2em - var(--actions-height));
-  padding-top: 2em;
+  height: calc(100vh - var(--app-bar-height) - var(--actions-height));
   background-color: #f5f5f5;
   flex-direction: column;
   position: relative;
@@ -41,7 +40,6 @@
   background-color: #f5f5f5;
   align-items: center;
   display: flex;
-  /* overflow-y: scroll; */
   position: relative;
   z-index: 0;
 }
@@ -52,11 +50,14 @@
   font-weight: 100;
   color: #333;
   text-transform: uppercase;
-  padding: 2vh 2vw;
+  margin-top: 2vh;
+  margin-left: 2vw;
   animation: fadeInLeft 1.5s;
 }
 
 .storytelling-work-preview-button-time {
+  margin-top: 2vh !important;
+  margin-left: 2vw !important;
   letter-spacing: 2px !important;
   font-size: 1.15em !important;
   animation: fadeInLeft 0.5s ease-out;
@@ -74,6 +75,10 @@
   overflow-x: scroll;
   justify-content: left;
   z-index: 1;
+}
+
+.storytelling-work-area-time::-webkit-scrollbar {
+  height: 12px;
 }
 
 .storytelling-menu-container-time {
@@ -140,7 +145,7 @@
 .storytelling-actions-button-time {
   position: absolute !important;
   left: 2vw !important;
-  bottom: calc(var(--actions-height) + 2vh) !important;
+  bottom: calc(var(--actions-height) + 15px + 1vh) !important;
   display: flex;
   z-index: 12;
 }
@@ -183,6 +188,7 @@
 }
 
 .storytelling-item-node-scene-time {
+  min-width: 40px;
   height: 100px !important;
   align-items: center;
   background-color: #77777777 !important;
@@ -190,7 +196,8 @@
 }
 
 .storytelling-wave {
-  z-index: 10;
+  position: relative;
+  z-index: 6;
 }
 
 .storytelling-script-time {
@@ -207,7 +214,7 @@
   width: 192px !important;
   min-height: 28px !important;
   position: absolute;
-  top: 20px;
+  top: 60px;
   background-color: #17599cef !important;
   background-size: contain;
   background-position: center;
@@ -217,10 +224,24 @@
   cursor: pointer;
 }
 
+.storytelling-timestamp-time {
+  width: 50px !important;
+  height: 20px !important;
+  position: absolute;
+  background-color: #f5f5f5 !important;
+  top: 40px;
+  align-items: center;
+  text-align: center;
+  z-index: 10;
+}
+
 .storytelling-item-actions-time {
-  margin-top: 5px;
   display: flex;
   position: relative;
+}
+
+.storytelling-item-father-fab-time {
+  position: absolute;
 }
 
 .storytelling-item-fab-time {
@@ -229,7 +250,7 @@
   height: 30px !important;
   min-height: 30px !important;
   min-width: 30px !important;
-  margin: 0 0.2vw !important;
+  margin: 5px 4px !important;
   z-index: 8;
 }
 
@@ -267,8 +288,8 @@
   z-index: 5;
   position: absolute;
   width: 2px;
-  height: calc(110px);
-  top: -10px;
+  height: calc(115px);
+  top: -15px;
 }
 
 .storytelling-selected-script-container-time {
@@ -277,7 +298,7 @@
   position: absolute;
   width: 2px;
   height: calc(150px);
-  bottom: -10px;
+  bottom: -50px;
 }
 
 .storytelling-media-preview-container-time {
@@ -290,7 +311,7 @@
 
 .storytelling-media-button-time {
   margin: 0 0.25vw !important;
-  margin-top: 1.5vh !important;
+  margin-top: 8px !important;
   letter-spacing: 1px !important;
   font-size: 1.2em !important;
 }
@@ -511,15 +532,7 @@
   right: 1vw !important;
 }
 
-.storytelling-link-container-time {
-  width: 100vw;
-  max-width: 100vw;
-  height: 100vh;
-  max-height: 100vh;
-  overflow: hidden;
-}
-
-.storytelling-share-btn-group-time .storytelling-share-btn {
+.storytelling-share-btn-group-time .storytelling-share-btn-time {
   padding: 10px 24px;
   cursor: pointer;
   float: left;
