--- a/SELI-Platform/client/stylesheet/storytelling-time.css
+++ b/SELI-Platform/client/stylesheet/storytelling-time.css
@@ -191,7 +191,7 @@
   min-width: 40px;
   height: 100px !important;
   align-items: center;
-  background-color: #77777777 !important;
+  background-color: #afafaf !important;
   cursor: pointer;
 }
 
