--- a/SELI-Platform/client/stylesheet/profiles.css
+++ b/SELI-Platform/client/stylesheet/profiles.css
@@ -9,6 +9,7 @@
   display: flex;
   align-items: center;
   transition: 0.35s;
+  margin-top: 1vh;
 }
 
 .student-profile-container {
@@ -37,8 +38,9 @@
 
 .student-profile-information-container-comment {
   width: calc(75vw - 200px);
-  padding: 2vh 1vw !important;
-  display: flex;
+  padding-top: 2vh !important;
+  padding-left: 1vw !important;
+  padding-right: 3vw !important;
 }
 
 .student-profile-information-text-primary {
