Forum activity updated Convergence in texteditor between text section and forum activities. Forum can add links of stories. Unsable packages uninstalled.

--- a/SELI-Platform/client/stylesheet/editor.css
+++ b/SELI-Platform/client/stylesheet/editor.css
@@ -115,6 +115,12 @@
   border: solid 1px #e0e0e0 !important;
 }
 
+.editor-link-button-story {
+  height: 40px !important;
+  color: #757575 !important;
+  border: solid 1px #e0e0e0 !important;
+}
+
 .editor-icon-link {
   color: #757575 !important;
   fill: #757575 !important;
