As a TEACHER I want to SETUP QUIZ WITH ALTERNATIVES TIMES CONSTRAINT #40

--- a/SELI-Platform/client/stylesheet/quiz.css
+++ b/SELI-Platform/client/stylesheet/quiz.css
@@ -9,11 +9,12 @@
 }
 
 .quiz-input-container{
-  width: 100%;
+  width: 90%;
   padding: 0 2.5%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 
 .question-form{
@@ -90,6 +91,9 @@
   letter-spacing: 1px;
   color: #616161;
   margin-right: 0.5vw;
+}
+.TimePickers{
+  justify-items: center;
 }
 
 .form-dialog-question-button-container-text-select {
