Usability bugs Restricted file size when uploading. Turkish button label. Course stories list updated. Rescrist course stories on course management from tutor side. Forum activity bug when created on units and lessons course.

--- a/SELI-Platform/client/stylesheet/storytelling-time.css
+++ b/SELI-Platform/client/stylesheet/storytelling-time.css
@@ -492,6 +492,10 @@
   float: left;
 }
 
+.right-click-menu {
+  z-index: 1000 !important;
+}
+
 .storytelling-share-btn-group-time:after {
   content: "";
   clear: both;
