DST Timeline. Entries programed for the end frame. Added new styles for end frame.

--- a/SELI-Platform/client/stylesheet/dialog.css
+++ b/SELI-Platform/client/stylesheet/dialog.css
@@ -234,6 +234,14 @@
   justify-content: center;
 }
 
+.success-dialog-content-storytelling-time {
+  width: 30vw !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .success-dialog-icon {
   margin-top: 2.5vh !important;
   font-size: 3.75em !important;
